# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  Item.py  README.md  Vagrantfile  app.py  component_diagram.drawio  container_diagram.drawio  context_diagram.drawio  flask_config.py  gunicorn.conf.py  item.py  login_manager.py  main.tf  mongo.py  outputs.tf  pyproject.toml  requirements.txt  requirments.txt  session_items.py  settings.py  task_item.py  test_client.py  test_items.py  test_system.py  trello.py  trello_config.py  trello_items.py  trello_items_test.py  user.py  variables.tf  view_model.py  view_model_test.py  wsgi.py
templates/: index.html  index_reader.html  index_users.html  index_writer.html  layout.html
tests/: e2e_test.py  trello_items_test.py  view_model_test.py
tests/e2e/: e2e_test.py
