[tool.poetry]
name = "devops-course-starter"
version = "0.1.0"
description = ""
authors = ["JoeWFisher <joseph.fisher@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"
datetime = "^4.3"
python-dateutil = "^2.8.1"
flask = "^1.1.2"
requests = "^2.24.0"
python-dotenv = "^0.12.0"
gunicorn = "20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
in-project = false 