[tool.poetry]
name = "devops-course-starter"
version = "0.1.0"
description = ""
authors = ["JoeWFisher <joseph.fisher@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"
datetime = "^4.3"
python-dateutil = "^2.8.1"
flask = "^1.1.2"
requests = "^2.24.0"
python-dotenv = "^0.12.0"
gunicorn = "20.0.4"
selenium = "^3.141.0"
pymongo = {extras = ["srv"], version = "^3.11.3"}
mongomock = "^3.22.1"
sentinels = "^1.0.0"
oauthlib = "^3.1.0"
flask-login = "^0.5.0"
requests_oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
in-project = false 